--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -20,6 +20,8 @@
     </style>
 
     <style name="TextInputLayoutPrimary">
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -27,7 +29,8 @@
     <style name="TextInputEditTextPrimary" parent="Widget.AppCompat.EditText">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="hintTextColor">@android:color/darker_gray</item>
         <item name="android:background">@color/black</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
         <item name="android:layout_width">match_parent</item>
