--- a/presentation/src/main/res/layout/activity_login.xml
+++ b/presentation/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_login_"
+            android:id="@+id/tv_login_register"
             style="@style/TextViewHintPrimary"
             android:layout_marginBottom="30dp"
             android:text="계정이 없다면? 회원가입"
