--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="background">#F9F9F9</color>
+
+    <color name="accepted">#D8FFD8</color>
+    <color name="waiting">#F9F9F9</color>
+    <color name="declined">#FFD8D8</color>
 </resources>
